--- a/buildenv/Dockerfile
+++ b/buildenv/Dockerfile
@@ -31,5 +31,5 @@ RUN mkdir build-gcc && \
 	make install-target-libgcc && \
 	make install-target-libstdc++-v3
 
-RUN apt install nasm grub-pc-bin grub-common xorriso
+RUN apt install -y nasm grub-pc-bin grub-common xorriso
 CMD "/bin/bash"
